<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="@dimen/margin_level_2"
	tools:context="paijan.memorise.tester.WordTesterPager" >

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tester_add_help"/>

	<EditText android:id="@+id/tester_dialog_add_advanced_comment"
		style="@style/Theme.EditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/tester_add_help_h"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/margin_level_3"
		android:text="@string/tester_add_syn"/>

	<EditText android:id="@+id/tester_dialog_add_advanced_edittext1"
		style="@style/Theme.EditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/tester_add_syn_h"/>

	<EditText android:id="@+id/tester_dialog_add_advanced_edittext2"
		style="@style/Theme.EditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/tester_add_syn_h"/>

	<EditText android:id="@+id/tester_dialog_add_advanced_edittext3"
		style="@style/Theme.EditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/tester_add_syn_h"/>

</LinearLayout>